tests/machine/x/cobol/map_assign.error
/tmp/TestCobolCompiler_VMValid_Golden3313344715/027/prog.cob:12: error: 'SCORES-BOB' is not defined
