tests/machine/x/cobol/map_assign.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:01Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MAP-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 SCORES.
           05 ALICE PIC 9 VALUE 1.
       01 TMP PIC 9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       COMPUTE SCORES-BOB = 2
       COMPUTE TMP = SCORES-BOB
       MOVE TMP TO TMP-STR
       DISPLAY FUNCTION TRIM(TMP-STR)
       STOP RUN.
